--- a/components/product/productList.hbs
+++ b/components/product/productList.hbs
@@ -21,7 +21,6 @@
                                             <input class="form-check-input" type="radio" 
                                             name="category" {{{radioChecked id ../catOption}}} 
                                             id={{id}} onclick="window.location='?category={{id}}'">
-                                            
                                             <label class="form-check-label" for={{id}}>
                                                 {{name}} ({{total_products}})
                                             </label>
@@ -36,10 +35,12 @@
 
                 <div class="col-xl-9 col-lg-8 col-md-7">
                     <div class="bg-light mb-4 px-3 pb-3 d-flex align-items-center flex-wrap">
-                        
-                        <div class="mt-3">
-                            <input type="text" class="form-control" id="shop-search" placeholder="Search">
-                        </div>
+                        <form action="/product/search" method="get">
+                            <div class="mt-3 input-group">
+                                <input type="text" name="keyword" class="form-control" id="shop-search" placeholder="Search" value="{{keyword}}">
+                                <button type="submit" class="btn btn-outline-secondary">Search</button>
+                            </div>
+                        </form>
                     </div>
                 
                 
